fixed margin on mobile; added running time stamp v1

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 .hamburger span {
-    height: 3px;
+    height: 3.2px;
     width: 37px;
     background-color: black;
     border-radius: 10px;
@@ -225,10 +225,7 @@ h2 {
     font-size: 2.7rem;
 }
 
-/* .time {
-    text-align: right;
-    width: 30%;
-} */
+
 
 .rate {
     text-align: center;
@@ -239,6 +236,7 @@ h2 {
 
 .songPlayer {
     display: flex;
+    position: relative;
     justify-content: space-around;
     width: 100%;
     margin: 0.5rem 0;
@@ -332,6 +330,15 @@ a#instagram:hover {
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
+}
+
+.time {
+    /* margin-left: 2rem; */
+    position: absolute;
+    /* text-align: right; */
+    top: 10;
+    left: 28%;
+    width: 100%;
 }
 
 .seekbar {
@@ -692,7 +699,7 @@ textarea.contact-form-control {
     }
     .songContainer {
         width: 100%;
-        max-height: 10rem;
+        /* max-height: 10rem; */
         padding: 0;
         margin: 2rem 0;
         padding-left: 0;
